# yunohost-rs

./: Cargo.toml  README.md  test.sh  update_readme.sh
.github/workflows/: docs.yml
hooks/conf_regen/: 01-yunohost.rs  logind.service.override.conf  nftables.service.override.conf  ntp.service.override.conf
src/: error.rs  hook.rs  lib.rs  main.rs  settings.rs  tools.rs  user.rs
src/cmd/: hook.rs  mod.rs  settings.rs  tools.rs  user.rs
src/cmd/hook/: list.rs  mod.rs
src/cmd/settings/: get.rs  list.rs  mod.rs
src/cmd/tools/: mod.rs  regen_conf.rs
src/cmd/user/: info.rs  list.rs  mod.rs
src/helpers/: apt.rs  configpanel.rs  credentials.rs  distro.rs  file.rs  form.rs  group.rs  hook.rs  i18n.rs  ldap.rs  legacy.rs  mail.rs  mod.rs  output.rs  permission.rs  process.rs  regenconf.rs  service.rs  settings.rs  string.rs  user.rs  users.rs
src/helpers/configpanel/: classic.rs  container.rs  error.rs  exclude_key.rs  export_bookworm.rs  export_bullseye.rs  filter_key.rs  full.rs  full_bookworm.rs  full_bullseye.rs  mod.rs  panel.rs  section.rs  version.rs
src/helpers/file/: error.rs  mod.rs
src/helpers/i18n/: error.rs  mocked_translator.rs  mod.rs  translator.rs  value.rs
src/moulinette/: i18n.rs  locales
tests/: __helpers.sh  __runner.sh
tests/compat/: hook.sh  settings.sh  tools.sh  user.sh
