[package]
name = "yunohost"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[features]
# Compile regen-conf hooks
hooks = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Some entries in the dependencies are commented because they are not used (yet?)
# but can prove useful in the future.
[dependencies]
# UTF-8 types for easier manipulation
camino = { version = "1.1", features = [ "serde1" ] }
# Command-line arguments parsing
clap = { version = "4.5", features = ["derive"] }
# helpers/regenconf.rs: generate file diffs
difflib = "0.4"
# helpers/file.rs: higher-level file manipulation
file-owner = "0.1"
# globbing paths (eg. `/etc/nginx/**/*`)
glob = "0.3"
# helpers/ldap.rs: interact with the LDAP database for users/permissions
ldap3 = { version = "0.11", default-features = false }
# Interfaecs for logging (see pretty_env_logger)
log = "0.4"
# HashMap literals via hashmap! macro
maplit = "1.0"
# helpers/regenconf.rs: for hashing files
md5 = "0.7"
# compile-time hashmaps/dicts
phf = { version = "0.11", features = [ "macros", "serde" ] }
# Colored logging to the console/log
pretty_env_logger = "0.5"
# Parallel processing
# rayon = "1.10"
# Regex processing
regex = "1.10"
# Interfaces for serialization/deserialization (see serde_json/serde_yaml_ng)
serde = { version = "1", features = [ "derive" ] }
# JSON serialization/deserialization
serde_json = { version = "1", features = [ "preserve_order" ] }
# YAML serialization/deserialization
serde_yaml_ng = "0.9"
# Serialize/Deserialize helper macros
serde_with = "3.8"
# Error handling and Result::context method
snafu = "0.8"
# moulinette: Runtime formatting of strings for i18n
strfmt = "0.2"
# str-valued enums
strum = { version = "0.26", features = ["derive"] }
# Async runtime for network queries (for now only ldap3)
tokio = { version = "1.37", features = [ "rt", "net" ] }
# helpers/configpanel.rs: reading TOML settings
toml = { version = "0.8", features = [ "preserve_order", "display" ] }

[lib]
name = "yunohost"
path = "src/lib.rs"

[[bin]]
name = "01-yunohost"
path = "hooks/conf_regen/01-yunohost.rs"
required-features = ["hooks"]

[[bin]]
name = "yunohost"
path = "src/main.rs"

# [[bin]]
# name = "02-ssl"
# path = "src/hooks/02-ssl.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "03-ssh"
# path = "src/hooks/03-ssh.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "06-slapd"
# path = "src/hooks/06-slapd.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "09-nslcd"
# path = "src/hooks/09-nslcd.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "10-apt"
# path = "src/hooks/10-apt.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "12-metronome"
# path = "src/hooks/12-metronome.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "15-nginx"
# path = "src/hooks/15-nginx.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "19-postfix"
# path = "src/hooks/19-postfix.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "25-dovecot"
# path = "src/hooks/25-dovecot.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "31-rspamd"
# path = "src/hooks/31-rspamd.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "34-mysql"
# path = "src/hooks/34-mysql.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "35-postgresql"
# path = "src/hooks/35-postgresql.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "36-redis"
# path = "src/hooks/36-redis.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "37-mdns"
# path = "src/hooks/37-mdns.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "43-dnsmasq"
# path = "src/hooks/43-dnsmasq.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "46-nsswitch"
# path = "src/hooks/46-nsswitch.rs"
# required-features = ["hooks"]

# [[bin]]
# name = "52-fail2ban"
# path = "src/hooks/52-fail2ban.rs"
# required-features = ["hooks"]
